--- a/screen.css
+++ b/screen.css
@@ -7,6 +7,122 @@ html {
 }
 
 body {
+    font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.625;
     margin: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+    transition: color .3s;
+}
+
+.header {
+    background: 
+    linear-gradient(180deg, rgba(0, 0, 0, 0.92), rgba(54, 54, 54, 0.5) 39.24%, rgba(28, 28,28, 0.4))
+    url(img/eggs.jpg) center center / cover no-repeat;
+    color: white;
+}
+
+.topbar {
+    padding: 18px 20px;
+    font-size: .875rem;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.menu-item:hover {
+    color: #C89446;
+}
+
+.logo {
+    margin-bottom: 15px;
+}
+
+.menu-item {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+.baseline {
+    padding: 50px 0 70px 0;
+    text-align: center;
+    line-height: 1;
+}
+
+.baseline-welcome {
+    font-family: 'Pinyon Script', serif;
+    color: #c89446;
+    font-size: 2.2rem;
+    display: block;
+}
+
+.baseline-name {
+    display: block;
+    font-size: 2.5rem;
+    padding-bottom: 10px;
+    font-weight: 700;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+.baseline-slogan {
+    font-size: 1rem;
+    font-weight: 300;
+    display: block;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.menu-button {
+    border: solid 1px #C89446;
+    padding: 7px 10px;
+    transition-property: color, background-color;
+    margin-top: 5px;
+}
+
+.menu-button:hover {
+    background: #C89446;
+    color: white;
+}
+
+@media only screen and (min-width: 600px) {
+    html {
+        font-size: 16px;
+    }
+    .logo {
+        padding-bottom: 0;
+    }
+    .topbar {        
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 1150px;
+        margin: 0 auto;
+    }
+    .menu-button {
+        border: solid 1px #C89446;
+        padding: 7px 10px;
+    }
+    .baseline {
+        padding: 125px 0 230px;
+
+    }
+    .baseline-slogan {
+        font-size: 1.5rem;
+    }
+    .baseline-name {
+        font-size: 4.375px;
+        letter-spacing: 12px;
+        padding-top: 8px;
+        padding-bottom: 18px;
+    }
+    .baseline-welcome {
+        font-size: 3.75rem;
+    }
+    .menu-button {
+        margin-top: 0;
+        margin-right: 0;
+    }
 }
