--- a/screen.css
+++ b/screen.css
@@ -20,9 +20,9 @@ a {
 
 .header {
     background: 
-     linear-gradient(180deg, rgba(0, 0, 0, 0.92), rgba(54, 54, 54, 0.5) 39.24%, rgba(28, 28, 28, 0.4)), 
-+    url(/img/eggs.jpg) center center / cover no-repeat;
-+    color: #FFF;
+    linear-gradient(180deg, rgba(0, 0, 0, 0.92), rgba(54, 54, 54, 0.5) 39.24%, rgba(28, 28, 28, 0.4)), 
+   url(/img/eggs.jpg) center center / cover no-repeat;
+   color: #FFF;
 }
 
 .topbar {
