--- a/screen.css
+++ b/screen.css
@@ -10,12 +10,18 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.625;
     margin: 0;
+    color: #6F6F6F;
 }
 
 a {
     color: inherit;
     text-decoration: none;
     transition: color .3s;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 .header {
@@ -87,13 +93,87 @@ a {
     color: #fff;
 }
 
+.home-section {
+    padding-top: 9px;
+}
+
+.container-small {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 960px;
+}
+
+.block {
+    margin-bottom: 50px;
+}
+
+.title {
+    font-size: 1.75rem;
+    line-height: 1.1;
+    letter-spacing: 2px;
+    color: black;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: 1rem 0 0 0;
+}
+
+.title span {
+    font-family: 'Pinyon Script', serif;
+    color: #C89446;
+    font-size: 2.5rem;
+    display: block;
+    text-transform: none;
+}
+
+.title::before {
+    content: '';
+    display: inline-block;
+    width: 24px;
+    height: 2px;
+    background: #C89446;
+    margin-bottom: 0.5rem;
+}
+
+.more {
+    color: #C89446;
+}
+
+.more:hover {
+    text-decoration: underline;
+}
+
+.more::after {
+    content: ' >';
+}
+
+.block-img {
+    max-width: 350px;
+    margin: 0 auto;
+    border: solid 1px #C89446;
+}
+
+.block-img img {
+    display: block;
+}
+
+.block-img img {
+    position: relative;
+    z-index: 1;
+}
+
+.block-centered {
+    text-align: center;
+}
+
 @media only screen and (min-width: 600px) {
     html {
         font-size: 16px;
     }
+
     .logo {
         margin-bottom: 0;
     }
+
     .topbar {        
         display: flex;
         align-items: center;
@@ -101,24 +181,109 @@ a {
         max-width: 1150px;
         margin: 0 auto;
     }
+
     .baseline {
         padding: 125px 0 230px;
 
     }
+
     .baseline-slogan {
         font-size: 1.5rem;
     }
+
     .baseline-name {
         font-size: 4.375rem;
         letter-spacing: 12px;
         padding-top: 8px;
         padding-bottom: 18px;
     }
+
     .baseline-welcome {
         font-size: 3.75rem;
     }
+
     .menu-button {
         margin-top: 0;
         margin-right: 0;
+    }
+
+}
+
+@media only screen and (min-width: 800px) {
+    .block {
+        margin-bottom: 100px;
+    }
+
+    .block-last {
+        margin-bottom: 60px;
+    }
+
+    .block-left, .block-right {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .block-img {
+        border: none;
+        position: relative;
+    }
+
+    .block-left .block-body, .block-right .block-body {
+        width: 445px;
+        flex: none;
+    }
+
+    .block-img::before {
+        content: '';
+        display: block;
+        border: solid 1px #C89446;
+        position: absolute;
+        top: -30px;
+        left: -30px; 
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+    }
+
+    .block-right .block-img::before {
+        left: auto;
+        right: -30px;
+    }
+
+    .block-left .block-img {
+        margin-left: 30px;
+    }
+
+    .block-right .block-img {
+        margin-right: 30px;
+    }
+
+    .block-left .block-body {
+        margin-left: 20px;
+    }
+
+    .block-right .block-body {
+        margin-right: 20px;
+        order: -1;
+    }
+
+    .title {
+        margin-bottom: 1.2rem;
+    }
+
+    .title::before {
+        margin-bottom: 10px;
+    }
+
+    .more {
+        display: block;
+        margin-top: 1.3rem;
+    }
+
+    .home-section {
+        background:
+        top 95px right 0px url(img/oranges.jpg) no-repeat,
+        top 640px left 0px url(img/spices.jpg) no-repeat;
     }
 }
