--- a/screen.css
+++ b/screen.css
@@ -103,6 +103,12 @@ img {
     max-width: 960px;
 }
 
+.container {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1150px;
+}
+
 .block {
     margin-bottom: 50px;
 }
@@ -138,12 +144,21 @@ img {
     color: #C89446;
 }
 
-.more:hover {
+.more a:hover {
     text-decoration: underline;
 }
 
-.more::after {
-    content: ' >';
+.more a::after {
+    content: '';
+    display: inline-block;
+    width: 5px;
+    height: 9px;
+    margin-left: .7em;
+    background: url(img/arrow-right.svg) center center no-repeat;
+    transition: transform .3s;
+}
+.more a:hover::after {
+    transform: translateX(3px);
 }
 
 .block-img {
@@ -163,6 +178,79 @@ img {
 
 .block-centered {
     text-align: center;
+}
+
+.block-centered .block-body {
+    max-width: 640px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ingredients-menu {
+    margin: 40px 0;
+    font-weight: 600;
+    color: #383838;
+    text-align: center;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.ingredients-menu a {
+    display: inline-block;
+    margin: 0 5px;
+    position: relative;
+}
+
+.ingredients-menu a::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    right: 0;
+    height: 1px;
+    opacity: 0;
+    background: #C89446;
+    transition: .3s;
+}
+
+.ingredients-menu .active::after, .ingredients-menu a:hover::after {
+    bottom: 0;
+    opacity: 1;
+}
+
+.menu-summary-item {
+    position: relative;
+    padding-left: 120px;
+    margin-bottom: 30px;
+}
+
+.menu-summary-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100px;
+}
+
+.menu-summary-title {
+    font-size: 1.125rem;
+    color: #383838;
+    font-weight: bold;
+    padding-bottom: 0.75rem;
+    margin-bottom: 0;
+}
+
+.menu-summary p {
+    margin: 0;
+    padding-bottom: 1rem;
+    font-size: 0.875rem;
+}
+
+.menu-summary-price {
+    font-family: 'Pinyon Script', serif;
+    color: #C89446;
+    font-size: 2.5rem;
+    line-height: 1;
 }
 
 @media only screen and (min-width: 600px) {
@@ -285,5 +373,70 @@ img {
         background:
         top 95px right 0px url(img/oranges.jpg) no-repeat,
         top 640px left 0px url(img/spices.jpg) no-repeat;
+    }
+
+    .ingredients-menu a {
+        margin: 0 32px;
+    }
+
+    .menu-summary {
+        position: relative;
+        padding: 85px 0;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .menu-summary-item {
+        padding-left: 192px;
+        margin-bottom: 110px;
+        width: calc(50% - 40px);
+    }
+
+    .menu-summary .menu-summary-item:nth-child(even) {
+        text-align: right;
+        padding-left: 0;
+        padding-right:  192px;
+    }
+
+    .menu-summary .menu-summary-item:nth-child(even) .menu-summary-img {
+        left: auto;
+        right: 0;
+    }
+
+    .menu-summary .menu-summary-item:nth-child(even) .menu-summary-price {
+        margin-left: auto;
+    }
+
+    .menu-summary-img {
+        width: 160px;
+    }
+
+    .menu-summary-title {
+        margin-top: 0;
+        line-height: 1.2;
+        background: #FFF;
+    }
+
+    .menu-summary p {
+        background: #FFf;
+    }
+
+    .menu-summary-price {
+        padding-top: 4px;
+        width: 85px;
+        background: #FFF;
+    }
+
+    .menu-summary::before {
+        content:'';
+        position: absolute;
+        display: block;
+        top: 50%;
+        left: 50%;
+        width: 420px;
+        height: 420px;
+        border: solid 1px #C89446;
+        transform: translate(-50%, -260px) rotate(45deg);
     }
 }
