--- a/screen.css
+++ b/screen.css
@@ -253,6 +253,81 @@ img {
     line-height: 1;
 }
 
+.reservation {
+    background: 
+        linear-gradient(180deg, rgba(0, 0, 0, 0.92), rgba(54, 54, 54, 0.5) 39.24%, rgba(28, 28, 28, 0.4)), 
+        url(img/reservation.jpg) center center / cover no-repeat;
+    color: rgba(255, 255, 255, 0.6);
+    padding: 50px 0;
+}
+
+.reservation .title {
+    color: #FFF;
+}
+
+.reservation input, .reservation select {
+    padding: 0 0.5rem;
+    width: 100%;
+    margin-bottom: 15px;
+    border: solid 1px #6F6F6F;
+    background: transparent;
+    text-transform: uppercase;
+    height: 40px;
+    font-size: 0.875rem;
+    color: #FFF;
+    font-family: 'Source Sans Pro', serif;
+    transition: background-color .3s, border-color .3s;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: 2px;
+}
+
+.reservation select {
+    background: no-repeat right 0.5rem center url(img/select.svg);
+}
+
+.reservation input:focus, .reservation select:focus{
+    background-color: rgba(255,255,255, .1);
+    border-color: #C89446;
+}
+
+.reservation .button {
+    width: 100%;
+}
+
+.button {
+    font-weight: 600;
+    font-size: 0.875rem;
+    color: #FFF;
+    background: #C89446;
+    border: none;
+    border: solid 1px transparent;
+    padding: 11px 1rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.button:hover {
+    border: solid 1px #C89446;
+    background: transparent;
+}
+
+.reservation p {
+    max-width: 625px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.reservation .block-centered .block-body {
+    max-width: 825px;
+}
+
+select option {
+    color: #000;
+}
+
 @media only screen and (min-width: 600px) {
     html {
         font-size: 16px;
@@ -438,5 +513,38 @@ img {
         height: 420px;
         border: solid 1px #C89446;
         transform: translate(-50%, -260px) rotate(45deg);
+    }
+    .block-chief {
+        display: flex;
+        align-items: center;
+        margin-bottom: 0px;
+    }
+
+    .block-chief .block-img::before {
+        display: none;
+    }
+
+    .block-chief .block-img {
+        flex: none;
+        width: 404px;
+        order: 2;
+    }
+    .reservation {
+        padding: 100px 0;
+    }
+
+    .reservation-form-row {
+        margin: 64px 0;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .reservation-form-row input, .reservation-form-row select {
+        width: calc(33.33% - 20px);
+        margin-bottom: 0;
+    }
+
+    .reservation .button {
+        width: calc(33.33% - 20px);
     }
 }
